garde/tests/ui/compile-fail/duplicate_rule.rs
#![allow(dead_code)]

#[derive(garde::Validate)]
struct Test<'a> {
    #[garde(ascii, ascii)]
    field: &'a str,
}

fn main() {}
